:wavy_dash: changed a line!

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<body>
     <p>I'm a terrible cheerleader</p>
     <p>We win!</p>
+    <em>it does work!</em>
     <p>The app works.</p>
 	</body>
 </html>
